--- a/posts/battling-spammers-on-shopify.mdx
+++ b/posts/battling-spammers-on-shopify.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Doing battle with the spammers on Shopify app store"
-description: "How i&apos;m working hard to ensure no spam is sent from zenshop."
+description: "How I'm working hard to ensure no spam is sent from zenshop."
 date: "2023-07-26"
 draft: false
 tags: ['spam', 'shopify']
