--- a/posts/battling-spammers-on-shopify.mdx
+++ b/posts/battling-spammers-on-shopify.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Doing battle with the spammers on Shopify app store"
+title: "[Coming soon] Doing battle with the spammers on Shopify app store"
 description: "How I'm working hard to ensure no spam is sent from zenshop."
-date: "2023-07-26"
+date: "2023-08-07"
 draft: false
 tags: ['spam', 'shopify']
 ---
