--- a/posts/deploying-flutter-web-in-production.mdx
+++ b/posts/deploying-flutter-web-in-production.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Thoughts on deploying a Flutter app to web in production"
+title: "[Coming soon] Thoughts on deploying a Flutter app to web in production"
 description: "zenshop now is 100% Flutter on the front-end."
-date: "2023-07-25"
+date: "2023-08-07"
 draft: false
 tags: ['flutter', 'flutter-web']
 ---
