--- a/posts/preloading-to-avoid-n-plus-one.mdx
+++ b/posts/preloading-to-avoid-n-plus-one.mdx
@@ -1,23 +1,52 @@
 ---
 title: "Avoiding GraphQL N+1 problems by using preloading"
 description: "Optimising the query performance has made much needed performance boost to zenshop"
-date: "2023-08-07"
+date: "2023-07-27"
 draft: true
 tags: ['rails', 'graphql', 'performance']
 ---
 
-# Avoiding GraphQL N+1 problems by using preloading
+Behind the scenes at zenshop is a very powerful [GraphQL API](https://graphql.pro) using ```graphql-ruby``` - which if you didn't know - is **seriously amazing**.
 
-Behind the scenes at zenshop is a very powerful [GraphQL api](https://graphql.pro) using ```graphql-ruby``` (which if you didn't know - is seriously amazing).
+zenshop has lots of data, ```Customers, Orders, Conversations, Messages, Events...```.
 
-zenshop has alot of data, ```Customers, Orders, Conversations, Messages, Events...```, really the list goes on. You can imagine there's plenty of opportunity for N+1 problems.
+Really the list goes on, so you can imagine there's plenty of opportunity for N+1 problems.
+
+There's essentially three main screens in zenshop I wanted to optimise to be faster:
+
+- Conversations
+- Orders
+- Customers
+
+Each screen had unique challenges for me due to the way the data was structured.
+
+## Recap, what's an N+1 problem?
+
+So what the heck is an N+1 problem anyway? It was new to me too, so don't feel bad if you didn't know. Lets say you fetch a bunch of Orders, which belong to a Customer, and you want to print out the name of the customer for each order you have.
+
+## Optimising conversations
 
 *zenshop conversations*
 <a href="/images/preloading-to-avoid-n-plus-one/conversations.png">
   <Image src="/images/preloading-to-avoid-n-plus-one/conversations.png" width={540} height={360} alt="zenshop conversations" />
 </a>
 
+Conversations are threads of ```Event``` in zenshop, this makes use of the ```delegated_type``` feature in Rails to enable a polymorphism for the association.
+
+Events can be either a ```Message```, ```Note``` or ```Activity```. When a user loads up a conversation in zenshop, we must also fetch the events within the conversation, and this was previously quite slow due to the N+1 problem.
+
+The conversation screen was actually the most challenging one for me to find solutions for, because ```delegated_type``` is a newer feature of Rails, but actually of course, like most things in Rails, the solution is beautifully simple.
+
+## Optimising orders
+
 *zenshop orders*
 <a href="/images/preloading-to-avoid-n-plus-one/orders.png">
   <Image src="/images/preloading-to-avoid-n-plus-one/orders.png" width={540} height={360} alt="zenshop orders" />
+</a>
+
+## Optimising customers
+
+*zenshop customers (in light mode!)*
+<a href="/images/preloading-to-avoid-n-plus-one/customers.png">
+  <Image src="/images/preloading-to-avoid-n-plus-one/customers.png" width={540} height={360} alt="zenshop customers" />
 </a>
